--- a/index.html
+++ b/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>Owen Dodd</title>
-    <link rel="icon" type="image/png" href="/assets/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
 
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Owen Dodd</title>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-      gtag("config", "UA-86134698-1");
-    </script>
-  </head>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  <body>
+    gtag("config", "UA-86134698-1");
+  </script>
+</head>
 
 <body>
 
@@ -66,10 +56,24 @@
       <img src="./assets/imgs/forest.jpeg" alt="">
     </section>
 
-      <section class="intro">
-        <p>
-          I'm a strategic designer building systems, tools, and interfaces.
-        </p>
+    <section class="body">
+      <p>
+        I’m a product designer currently working at <a href="https://cooking.nytimes.com/">NYT Cooking</a> focused on
+        shaping our content ecosystem and developing our design systems.
+      </p>
+      <p>
+        Previously, I’ve developed workflow tools and iniated internal design systems for the newsroom within <a
+          href="https://www.nytimes.com/">The New York Times</a>. And while at <a
+          href="https://www.artsy.net/">Artsy</a>, I led design and product for the Editorial team, directed the show
+        browsing experience for Artsy’s iOS App and worked across on inventory managment tools for galleries.
+      </p>
+      <p>Additionally, I take on projects in food and natural wine space, make photographs, and occasionally develop
+        websites for small businesses. </p>
+      <p>
+        Please <a href="mailto:mail@owendodd.com">reach out</a> to discuss any potential projects or collaborations.
+      </p>
+    </section>
+  </div>
 
   <footer>
     <div class="link-menu">
@@ -94,6 +98,4 @@
   <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
 
-    <script type="text/javascript" src="/assets/js/script.js"></script>
-  </body>
 </html>
