--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="content">
     <section class="head">
       <h1>Systems, interfaces, and tools</h1>
-      <img src="./assets/imgs/forest.jpeg" alt="">
+      <img src="./assets/imgs/forest.jpeg" alt="Owen Dodd">
     </section>
 
     <section class="body">
@@ -77,9 +77,6 @@
 
   <footer>
     <div class="link-menu">
-      <!-- <div class="link-icon">
-        <h2>Links</h2>
-      </div> -->
       <a class="link-item" href="mailto:mail@owendodd.com">
         <h2>mail@owendodd.com</h2>
       </a>
