--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="content">
     <section class="head">
-      <h1>Systems, interfaces, and tools</h1>
+      <!-- <h1>Information</h1> -->
       <img src="./assets/imgs/forest.jpeg" alt="Owen Dodd">
     </section>
 
