--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           href="https://www.artsy.net/">Artsy</a>, I led design and product for the Editorial team, directed the show
         browsing experience for Artsy’s iOS App and worked across on inventory managment tools for galleries.
       </p>
-      <p>Additionally, I take on projects in food and natural wine space, make photographs, and occasionally develop
-        websites for small businesses. </p>
+      <!-- <p>Additionally, I take on projects in food and natural wine space, make photographs, and occasionally develop
+        websites for small businesses. </p> -->
       <p>
         Please <a href="mailto:mail@owendodd.com">reach out</a> to discuss any potential projects or collaborations.
       </p>
