--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
   <header>
     <h1>Office of Owen Dodd</h1>
-    <h1>Design and strategy for the web</h1>
-    <h1>Copenhagen, New York, and remote</h1>
+    <h1>Design and strategy for products and systems</h1>
+    <h1>Copenhagen, New York & online</h1>
   </header>
 
   <div class="links">
@@ -47,6 +47,14 @@
       linkedin.com/in/ododd
     </a></p>
   </div>
+  
+  <footer>
+    <h1>Krystalgade 7, 1</br>1172 Copenhagen K</h1>
+    <h1>1591 Union St #2</br>Brooklyn, NY 11213</h1>
+    <!-- <h1><a class="link-item" target="_blank" href="mailto:mail@owendodd.com">
+      mail@owendodd.com
+    </a></h1> -->
+  </footer>
 
   <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
