--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
     <h1>Office of Owen Dodd</h1>
     <h1>Design and strategy for products and systems</h1>
     <h1>Copenhagen, New York & online</h1>
+    <h1><a class="link-item" target="_blank" href="mailto:mail@owendodd.com">
+      mail@owendodd.com
+    </a></h1>
   </header>
 
-  <div class="links">
-    <p><a class="link-item" target="_blank" href="mailto:mail@owendodd.com">
-      mail@owendodd.com
-    </a></p>
+  <!-- <div class="links">
+    
   <p><a class="link-item" target="_blank" href="https://www.instagram.com/owendodd/">
       instagram.com/owendodd
     </a></p>
@@ -46,7 +47,7 @@
   <p><a class="link-item" target="_blank" href="https://www.linkedin.com/in/ododd/">
       linkedin.com/in/ododd
     </a></p>
-  </div>
+  </div> -->
   
   <footer>
     <h1>Krystalgade 7, 1</br>1172 Copenhagen K</h1>
