--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>I work on design and strategy for digital products, creating intuitive experiences for real humans. My practice spans design systems, brand identity, product strategy and interface design. I’m interested in working with small teams that are focused on social and environmental issues, tooling, art and culture, or food. </p>
     <p>Currently I'm a product design lead at Good Dog. Previously I've worked at NYT Cooking, The New York Times, and at Artsy.</p>
     <div class="button-group">
-      <a href="">View selected work</a>
+      <!-- <a href="">View selected work</a> -->
       <a href="mailto:mail@owendodd.com?subject=Case Studies">Request case studies</a>
     </div>
   </div>
