--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
 <body>
 
-  <div class="bg"></div>
+  <!-- <div class="bg"></div> -->
+  <video autoplay muted loop class="bgVid">
+    <source src="/assets/bg.mp4" type="video/mp4">
+  </video>
+
   <div class="container">
 
   <header>
