--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
     <div class="text">
       <h1>Office of Owen Dodd</h1>
       <h1>Copenhagen & New York</h1>
+      <p>I'm a designer and strategist for digital products. My work spans creating design systems, brand identities, product strategy, interfaces and services with a focus on creating intuitive and effective experiences.</p>
+      <p>I’m interested in working with small teams that are focused on social and environmental issues, tooling, art and culture, or food.</p>
+    <p>Currently I'm a product design lead at Good Dog. Previously I've worked at NYT Cooking, The New York Times, and at Artsy.</p>
+    <div class="button-group">
+      <!-- <a href="">View selected work</a> -->
+      <a href="mailto:mail@owendodd.com?subject=Case Studies">Request case studies</a>
     </div>
+    </div>
+
+    <div class="about">
+    
+  </div>
 
     <!-- <div class="menu">
       <a href="">Product Design</a>
@@ -44,14 +55,6 @@
   </header>
 
   <div class="content">
-  <div class="about">
-    <p>I work on design and strategy for digital products, creating intuitive experiences for real humans. My practice spans design systems, brand identity, product strategy and interface design. I’m interested in working with small teams that are focused on social and environmental issues, tooling, art and culture, or food. </p>
-    <p>Currently I'm a product design lead at Good Dog. Previously I've worked at NYT Cooking, The New York Times, and at Artsy.</p>
-    <div class="button-group">
-      <!-- <a href="">View selected work</a> -->
-      <a href="mailto:mail@owendodd.com?subject=Case Studies">Request case studies</a>
-    </div>
-  </div>
 
   <footer>
     <div class="link-group">
