--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- <div class="bg"></div> -->
   <video autoplay muted loop class="bgVid">
-    <source src="/assets/bg2.mp4" type="video/mp4">
+    <source src="/assets/bg4.m4v" type="video/mp4">
   </video>
 
   <div class="container">
