--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <header>
     <div class="text">
-      <h1>Office of Owen Dodd</h1>
+      <h1>Owen Dodd</h1>
       <h1>Copenhagen & New York</h1>
       <p>I'm a designer and strategist for digital products. My work spans developing design systems, brand identities, product strategy, interfaces and services with a focus on creating intuitive and effective experiences.</p>
       <p>I’m interested in working with small teams that are focused on social and environmental issues, tooling, art and culture, or food.</p>
