--- a/index.html
+++ b/index.html
@@ -26,49 +26,50 @@
 <body>
 
   <!-- <div class="bg"></div> -->
-  <video autoplay muted loop class="bgVid">
-    <source src="/assets/bg4.m4v" type="video/mp4">
+  <video autoplay muted loop class="bgVid" poster="./assets/poster.png">
+    <source src="./assets/bg.m4v" type="video/mp4">
   </video>
 
   <div class="container">
 
-  <header>
-    <div class="text">
-      <h1>Owen Dodd</h1>
-      <h1>Copenhagen & New York</h1>
-      <p>I'm a designer and strategist for digital products. My work spans developing design systems, brand identities, product strategy, interfaces and services with a focus on creating intuitive and effective experiences.</p>
-      <p>I’m interested in working with small teams that are focused on social and environmental issues, tooling, art and culture, or food.</p>
-    <p>Currently I'm a product design lead at Good Dog. Previously I've worked at NYT Cooking, The New York Times, and at Artsy.</p>
-    <div class="button-group">
-      <!-- <a href="">View selected work</a> -->
-      <a href="mailto:mail@owendodd.com?subject=Case Studies">Request case studies</a>
-    </div>
-    </div>
+    <header>
+      <div class="text">
+        <h1>Owen Dodd</h1>
+        <h1>Copenhagen & New York</h1>
+        <p>I'm a designer and strategist for digital products. My work experience spans developing design systems, brand
+          identities, and intuitive user experiences.</p>
+        <p>I'm focused on helping teams develop strong design culture while creating best in class experiences for their
+          users. Currently leading design at Good Dog, previously at The New York Times, and Artsy.</p>
+        <div class="button-group">
+          <!-- <a href="">View selected work</a> -->
+          <a href="mailto:mail@owendodd.com?subject=Case Studies">Request case studies</a>
+        </div>
+      </div>
 
-    <div class="about">
-    
-  </div>
+      <div class="about">
 
-    <!-- <div class="menu">
+      </div>
+
+      <!-- <div class="menu">
       <a href="">Product Design</a>
     </div> -->
-  </header>
+    </header>
 
-  <div class="content">
+    <div class="content">
 
-  <footer>
-    <div class="link-group">
-      <a target="_blank" href="mailto:mail@owendodd.com">Email</a>
-      <a target="_blank" href="https://www.instagram.com/owendodd">Instagram</a>
-      <a target="_blank" href="https://www.are.na/owen-dodd/">Are.na</a>
-      <a target="_blank" href="https://read.cv/owendodd">Read.CV</a>
+      <footer>
+        <div class="link-group">
+          <a target="_blank" href="mailto:mail@owendodd.com">Email</a>
+          <a target="_blank" href="https://www.instagram.com/owendodd">Instagram</a>
+          <a target="_blank" href="https://www.are.na/owen-dodd/">Are.na</a>
+          <a target="_blank" href="https://read.cv/owendodd">Read.CV</a>
+        </div>
+      </footer>
     </div>
-  </footer>
-</div>
 
-</div>
+  </div>
 
-  
+
 
   <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
