--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
   <!-- <div class="bg"></div> -->
-  <video autoplay muted loop class="bgVid" poster="./assets/poster.png">
+  <video autoplay loop muted playsinline class="bgVid" poster="./assets/poster.png">
     <source src="./assets/bg.mp4" type="video/mp4">
   </video>
 
