--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
     <header>
       <div class="text">
-        <h1>Owen Dodd</h1>
-        <h1>Copenhagen & New York</h1>
+        <h1>Owen Dodd <span class="cities">Copenhagen & New York</span></h1>
         <p>I'm a designer and strategist for digital products. My work experience spans developing design systems, brand
           identities, and intuitive user experiences.</p>
         <p>I'm focused on helping teams develop strong design culture while creating best in class experiences for their
