--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1>Owen Dodd <span class="cities">Copenhagen & New York</span></h1>
         <p>I'm a designer and strategist for digital products. My work experience spans developing design systems, brand
           identities, and intuitive user experiences.</p>
-        <p>I'm focused on helping teams develop strong design culture while creating best in class experiences for their
+        <p>I focus on helping teams develop strong design culture while creating best in class experiences for their
           users. Currently leading design at Good Dog, previously at The New York Times, and Artsy.</p>
         <div class="button-group">
           <!-- <a href="">View selected work</a> -->
